Fixes sidebar indicator flickering when changing tabs

--- a/Breeze.UI/src/scss/_custom.scss
+++ b/Breeze.UI/src/scss/_custom.scss
@@ -85,7 +85,6 @@ code {color: $spacegray !important;}
       &:hover {
         opacity: .8;
         cursor: pointer !important;
-        .bar {opacity: 0;}
       }
       img {width: 42px;}
     }
