--- a/Breeze.UI/src/styles.css
+++ b/Breeze.UI/src/styles.css
@@ -117,10 +117,6 @@ code {
   cursor: pointer !important;
 }
 
-#sidebar .menu li:hover .bar {
-  opacity: 0;
-}
-
 #sidebar .menu li img {
   width: 42px;
 }
